[project]
name = "nova"
version = "3.0.0"
description = "Nova - AI-powered README generator with deep code scanning for perfect documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "ollama>=0.5.1",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.scripts]
nova = "cli:main"
nova-v2 = "generator_v2:main"
nova-simple = "simple_cli:main"
